# mobile-robotics-rc

./: Dockerfile  entrypoint.sh  run_project.sh  setup_host.sh
docker/: Dockerfile  run_docker.sh
matlab/: runRC.m  testController.m
scripts/: entrypoint.sh  setup_host.sh
vesc/vesc_driver/params/: vesc_config.yaml
ydlidar_ros2/: CMakeLists.txt  package.xml
ydlidar_ros2/src/: ydlidar_ros2_node.cpp
ydlidar_sdk/core/common/: ydlidar_help.h
ydlidar_sdk/samples/: scl_test.cpp  tea_test.cpp
ydlidar_sdk/src/: CYdLidar.cpp  SDMLidarDriver.h  YDlidarDriver.h
